# shadertoy_clone

./: .gitignore  CMakeLists.txt  LICENSE  README.md  app.json
example/: 0000.txt  0001.txt  0002.txt  0003.txt  0004.txt  0005.txt  0006.txt  0007.txt  0008.txt  0009.txt  0010.txt  0011.txt  0012.txt  0013,txt  0014.txt  0015.txt  0016.txt  0017.txt  0018.txt  0019.txt  0020.txt  0021.txt  0022.txt  0023.txt  0024.txt  0025.txt  0026.txt  0027.txt  0028.txt  0029.txt  0030.txt  0031.txt  0032.txt  0033.txt  0034.txt  0035.txt  0036.txt  0037.txt  0038.txt  0039.txt  (+15 more)
example/the_art_shader/: 0000.fs  0001.fs  0002.fs  0003.fs  0004.fs  0005.fs  0006.fs  0007.fs  0008.fs  0009.fs  0010.fs  0011.fs  0012.fs  0013.fs  0014.fs  0015.fs  0016.fs  0017.fs  0018.fs  0019.fs  0020.fs  0021.fs  0022.fs  0023.fs  0024.fs  0025.fs  0026.fs
include/: cv_gui.h  json.hpp
include/Fonts/: FontAwesome5.h  Fonts.h  RobotoBold.h  RobotoItalic.h  RobotoMonoBold.h  RobotoMonoItalic.h  RobotoMonoRegular.h  RobotoRegular.h
src/: shadertoy.cpp
